[PHOENIX-7689] Codacy issue fix.